@@ -1,5 +1,6 @@
 2021-09-22 Danilo Chang
 
+	* Implement command: fitLine (for 2D point set)
 	* Implement command: LogisticRegression, SVMSGD
 	* Add pop_back and push_back method to MATRIX function
 
